--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php" : "^5.6|^7.0",
-        "illuminate/support": "^5.4",
-        "illuminate/session": "^5.4"
+        "php" : "^7.2.3",
+        "illuminate/support": "^6.0.0",
+        "illuminate/session": "^6.0.0"
     },
     "require-dev": {
         "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "^8.3.0"
     },
     "autoload": {
         "psr-0": {
